test/type/fail/field_assign_non_class.j
class A {
  Void main() {
    ("a").a = 5;
  }
}
